# studybuddy

./: .editorconfig  .pre-commit-config.yaml  Dockerfile.dev  Makefile  Procfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_topic_room_host_message_room_topic.py  0003_alter_room_options.py
base/templates/base/: delete.html  home.html  login.html  register.html  room.html  room_form.html
contrib/: env-sample
docs/: index.md
studybud/: settings.py  urls.py
templates/: home.html  main.html  navbar.html  room.html
