[tool.poetry]
name = "studybuddy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
python-decouple = "^3.5"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
django-extensions = "^3.1.5"
django-test-without-migrations = "^0.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
flakehell = "^0.9.0"
black = "^22.1.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.9"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "studybud.settings"
addopts = "--nomigrations"
python_files = "tests.py test_*.py *_tests.py"

[tool.flakehell]
exclude = ["README.md", "manage.py", "migrations"]
format = "colored"
max-line-length = 119
max_complexity = 2
show_source = true

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
pyflakes = ["+*", "-F403","-E128","-E126"]
pycodestyle = ["+*"]
pylint = ["+*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
